<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            app:titleTextColor="@color/colorTextLight" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:textSize="@dimen/header_text_size"
                tools:text="Header" />

            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:textSize="@dimen/recipe_body_text_size"
                tools:text="@string/lorem_ipsum_280" />

            <TextView
                android:id="@+id/ingredientsListLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/ingredients_list_label"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_arrow_down_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Add list -->

            </LinearLayout>

            <TextView
                android:id="@+id/cookingStepsListLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/steps_list_label"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_arrow_down_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Add list -->

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>